--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     
     <div class="callout large primary">
       <div class="text-center">
-        <h1>Our Blog</h1>
-        <h2 class="subheader">Such a Simple Blog Layout</h2>
+        <h1>Alex's Page</h1>
+        <h2 class="subheader">Give me a good grade please :D</h2>
       </div>
     </div>
     
