--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="blog-post">
             <h3>Awesome blog post title <small>3/6/2016</small></h3>
             <img class="thumbnail" src="https://placehold.it/850x350">
-            <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+            <p>Hello professor!</p>
             <div class="callout">
               <ul class="menu simple">
                 <li><a href="#">Author: Mike Mikers</a></li>
@@ -75,7 +75,7 @@
             <div class="blog-post">
               <h3>Awesome blog post title <small>3/6/2016</small></h3>
               <img class="thumbnail" src="https://placehold.it/850x350">
-              <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+              <p>How was your day today?</p>
               <div class="callout">
                 <ul class="menu simple">
                   <li><a href="#">Author: Mike Mikers</a></li>
@@ -90,7 +90,7 @@
               <div class="blog-post">
                 <h3>Awesome blog post title <small>3/6/2016</small></h3>
                 <img class="thumbnail" src="https://placehold.it/850x350">
-                <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+                <p>This is my first time using VS Code, the Anaconda Prompt, and GitHub</p>
                 <div class="callout">
                   <ul class="menu simple">
                     <li><a href="#">Author: Mike Mikers</a></li>
@@ -105,7 +105,7 @@
                 <div class="blog-post">
                   <h3>Awesome blog post title <small>3/6/2016</small></h3>
                   <img class="thumbnail" src="https://placehold.it/850x350">
-                  <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+                  <p>I'm very proud of myself for making it this far because all these programs seemed so scary at first</p>
                   <div class="callout">
                     <ul class="menu simple">
                       <li><a href="#">Author: Mike Mikers</a></li>
