--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <div class="grid-x align-center">
         <div class="cell medium-8">
           <div class="blog-post">
-            <h3>Awesome blog post title <small>3/6/2016</small></h3>
+            <h3>Hello professor! <small>9/4/2022</small></h3>
             <img class="thumbnail" src="https://placehold.it/850x350">
-            <p>Hello professor!</p>
+            <p>ishvkjsebtkgsfaguahbdg</p>
             <div class="callout">
               <ul class="menu simple">
                 <li><a href="#">Author: Mike Mikers</a></li>
@@ -73,9 +73,9 @@
         <div class="grid-x align-center">
           <div class="cell medium-8">
             <div class="blog-post">
-              <h3>Awesome blog post title <small>3/6/2016</small></h3>
+              <h3>How was your day today? <small>X/X/XXXX</small></h3>
               <img class="thumbnail" src="https://placehold.it/850x350">
-              <p>How was your day today?</p>
+              <p>sdjkhvbksjndkjbvhst</p>
               <div class="callout">
                 <ul class="menu simple">
                   <li><a href="#">Author: Mike Mikers</a></li>
@@ -88,9 +88,9 @@
           <div class="grid-x align-center">
             <div class="cell medium-8">
               <div class="blog-post">
-                <h3>Awesome blog post title <small>3/6/2016</small></h3>
+                <h3>This is my first time using VS Code, the Anaconda Prompt, and GitHub <small>X/X/XXXX</small></h3>
                 <img class="thumbnail" src="https://placehold.it/850x350">
-                <p>This is my first time using VS Code, the Anaconda Prompt, and GitHub</p>
+                <p>jksebhvakdfbvkasfngkjbsfg</p>
                 <div class="callout">
                   <ul class="menu simple">
                     <li><a href="#">Author: Mike Mikers</a></li>
@@ -103,9 +103,9 @@
             <div class="grid-x align-center">
               <div class="cell medium-8">
                 <div class="blog-post">
-                  <h3>Awesome blog post title <small>3/6/2016</small></h3>
+                  <h3>I'm very proud of myself for making it this far because all these programs seemed so scary at first <small>X/X/XXXX</small></h3>
                   <img class="thumbnail" src="https://placehold.it/850x350">
-                  <p>I'm very proud of myself for making it this far because all these programs seemed so scary at first</p>
+                  <p>more random letters</p>
                   <div class="callout">
                     <ul class="menu simple">
                       <li><a href="#">Author: Mike Mikers</a></li>
